--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
         <title>Random Quote Generator</title>
 
         <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
+        <link rel="stylesheet" href="css/index.css">
+
+        <script src="src/onTagsChange.js" type="text/javascript" defer></script>
     </head>
     <body>
-        <script src="https://dohliam.github.io/dropin-minimal-css/switcher.js" type="text/javascript"></script>
-
         <nav>
             <h1>Random Quote Generator</h1>
 
