--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
                 <!-- Populated by src/tagsdropdown.js -->
             </select>
             <script src="src/tagsdropdown.js" type="text/javascript"></script>
+
+            <button onclick="showAddQuote()">+</button>
         </nav>
+        
+        <form id="addQuote" hidden>
+            <label for="quote">Quote:</label><br>
+            <input type="text" id="quote" name="quote"><br>
+            <label for="author">Author:</label><br>
+            <input type="text" id="author" name="author"><br>
+            <label for="tag">Tag:</label>
+            <input type="text" id="tag" name="tag"><br>
+            <input type="submit" value="Submit">
+        </form>
 
         <main>
             <section id="quotes">
