--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
         <link rel="stylesheet" href="css/index.css">
 
-        <script src="src/onTagsChange.js" type="text/javascript" defer></script>
+        <script src="./src/onTagsChange.js" type="text/javascript" defer></script>
     </head>
     <body>
         <nav>
@@ -20,7 +20,7 @@
             <select name="tags" id="tags">
                 <!-- Populated by src/tagsdropdown.js -->
             </select>
-            <script src="src/tagsdropdown.js" type="text/javascript"></script>
+            <script src="./src/tagsdropdown.js" type="text/javascript"></script>
 
             <button onclick="showAddQuote()">+</button>
         </nav>
@@ -39,7 +39,7 @@
             <section id="quotes">
                 <!-- Populated by src/populatequotes.js -->
             </section>
-            <script src="src/populatequotes.js" type="text/javascript"></script>
+            <script src="./src/populatequotes.js" type="text/javascript"></script>
         </main>
 
         <footer>
